--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             it's a smaller font and the color is lower contrast </div>
         <button class="ye">Sign up</button>
     </div>
-    <div class="pic">
-        <img src="./flower.jpg" alt="cutebackground" class="tic">
+    <div class="pic">This is a placeholder for an image
+    
     </div>
 
 </div>
