--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="sec">
     <div class="p">
         <div class="Main"> <strong>This website is awesome</strong></div>
-        <div class="next">this website has some subtext that go  here under the main tile.
+        <div class="next">This website has some subtext that goes  here under the main tile.
             it's a smaller font and the color is lower contrast </div>
         <button class="ye">Sign up</button>
     </div>
